<resources>
    <string name="app_name">懒点看</string>
    <string name="cancel">取消</string>
    <string name="submit">确定</string>
    <string name="perDialog">""</string>
    <string name="copyRight">
        Copyright © NineDollar.All Rights Reserved.
    </string>
    <string name="ysq">已授权</string>
    <string name="wsq">未授权</string>
    <string name="kuaisu">快速设置</string>
    <string name="channel_name">懒点看</string>
    <string name="channel_description">前天服务</string>
    <string name="local_service_started">前台服务开始</string>
    <string name="local_service_stopped">前台服务停止</string>
    <string name="local_service_label">前台服务</string>
    <string name="local_service_connected">以连接前台服务</string>
    <string name="local_service_disconnected">停止前台服务</string>
    <string name="remote_service_connected">连接成功</string>
    <string name="remote_service_disconnected">连接失败</string>
    <string name="remote_service_started">服务开始</string>
    <string name="remote_service_stopped">服务停止</string>
    <string name="create">创建通知</string>
    <string name="btn_answr_dd">手动答题</string>
    <string name="dati">答题</string>
    <string name="dakaixuanfuchaung">打开悬浮窗</string>
    <string name="readvideo">阅读和视频</string>
    <string name="show">显示信息</string>
    <string name="xufuchuang">悬浮窗</string>
    <string name="accessibility">本应用不会收集个人隐私，放心使用</string>
    <string name="start_xue_xi">开始学习</string>
    <string name="stop">结束</string>
    <string name="ticker">通知来了</string>
</resources>
