<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="必要权限"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fuzhulayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/textview1">

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#a3a3a3"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fuzhu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:onClick="openfuzhu"
            android:paddingLeft="15dp"
            android:text="开启辅助服务"
            android:textSize="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/wsq"
            android:textSize="15dp"
            android:id="@+id/fuzhutext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/mage1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mage1"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_arrow_drop_down_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/xuanfuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/fuzhulayout">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#a3a3a3"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/xuanfu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:onClick="openxuanfu"
            android:paddingLeft="15dp"
            android:text="允许使用悬浮窗"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/view2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="建议不开"/>

        <TextView
            android:id="@+id/xuanfutext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wsq"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/mage2"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mage2"
            android:background="@drawable/ic_arrow_drop_down_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="后台运行权限"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/xuanfuLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/houtailayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        app:layout_constraintTop_toBottomOf="@+id/textview2">

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#a3a3a3"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ziqidong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:onClick="openziqidong"
            android:paddingLeft="15dp"
            android:text="允许后台自启动"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/view4" />

        <TextView
            android:id="@+id/houtaitext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kuaisu"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/mage3"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mage3"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_arrow_drop_down_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dianlianglayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/houtailayout">

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#a3a3a3"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dianliang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:onClick="opendianliang"
            android:paddingLeft="15dp"
            android:text="允许后台使用电量"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/view5" />

        <TextView
            android:id="@+id/dianliangtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wsq"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/mage4"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mage4"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_arrow_drop_down_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/soudinglayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_constraintTop_toBottomOf="@+id/dianlianglayout">

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#a3a3a3"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/soding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:onClick="opensoding"
            android:paddingLeft="15dp"
            android:text="在任务栏中锁定"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/view6" />

        <TextView
            android:id="@+id/soudingtxst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kuaisu"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/mage5"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mage5"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_arrow_drop_down_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/soudinglayout">

        <TextView
            android:id="@+id/textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="不必要权限"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="#a3a3a3"
            app:layout_constraintTop_toBottomOf="@+id/textview3" />

        <TextView
            android:id="@+id/yinchang"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:text="在[近期任务栏]列表中隐藏"
            android:textColor="@color/font_common_1"
            android:textSize="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view7" />

        <Switch
            android:id="@+id/switchyinchang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view7"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/copyRight"/>

</androidx.constraintlayout.widget.ConstraintLayout>